# string_to_code_proj

./: .codacy.yml  .gitpod.dockerfile  .gitpod.yml  .pylintrc  README.md  bandit.yml  check_all_python_files.sh  check_all_python_scripts.sh  check_all_shell_scripts.sh  check_python_file.sh  codecov.yml  gitpod.dockerfile  pyproject.toml  sonar-project.properties  validate_codecov_yml.sh
.github/: renovate.json
.github/workflows/: all_url_check.yml  black_format.yml  check_shell_scripts.yml  codeql.yml  create_tag.yml  generate_and_upload_coverage_data.yml  pip_audit.yml  publish.yml  python_test.yml  renovate.yml  sonarcloud_check.yml  upload_to_codecov.yml  upload_to_coverage_report.yml  yaml_check.yml
examples/: example_general.py  example_list_available_languages.py  example_to_cpp.py  example_to_cpp_custom_function_names.py  example_to_java.py  run_all_examples.sh  run_python_file.sh  setup_examples.py
string_to_code/: README.md  c_like_utils.py  core.py  string_to_code.py  to_ada.py  to_algol68.py  to_ballerina.py  to_bash.py  to_c.py  to_cobol.py  to_cpp.py  to_fortran90.py  to_haskell.py  to_java.py  to_kotlin.py  to_lisp.py  to_lua.py  to_nim.py  to_pascal.py  to_python.py  to_python3.py  to_rust.py  utils.py
string_to_code_module/: core.py  string_to_bash.py  string_to_code.py  string_to_cpp.py  string_to_lisp.py  string_to_python.py
system_setup_scripts/: install_all.sh  install_all_no_sudo.sh  setup_all.sh  setup_for_ada.sh  setup_for_algol68.sh  setup_for_ballerina.sh  setup_for_bash.sh  setup_for_c.sh  setup_for_cobol.sh  setup_for_cpp.sh  setup_for_fortran90.sh  setup_for_haskell.sh  setup_for_java.sh  setup_for_kotlin.sh  setup_for_lisp.sh  setup_for_lua.sh  setup_for_nim.sh  setup_for_pascal.sh  setup_for_rust.sh  setup_no_sudo_for_nim.sh
tests/: all_language_data.py  base_string_to_code_test.py  conftest.py  general_utilities.py  setup_ada.py  setup_algol68.py  setup_ballerina.py  setup_bash.py  setup_c.py  setup_cobol.py  setup_cpp.py  setup_fortran90.py  setup_haskell.py  setup_java.py  setup_kotlin.py  setup_lisp.py  setup_lua.py  setup_nim.py  setup_pascal.py  setup_python.py  setup_python3.py  setup_rust.py  source_code_examples.py  test_all.py  test_printer_program.py  test_proc_printer_program.py  test_string_to_bash.py  test_string_to_code.py  test_string_to_cpp.py  test_string_to_lisp.py  test_string_to_python.py  test_system_setup.py
tests/example_data/ada/: function_used_twice.adb  one_empty_function.adb  single_atom.adb
tests/example_data/algol68/: function_used_twice.alg  (+1 more)
(+58 files in other folders)
