[tool.poetry]
name = "string-to-code"
version = "0.5.0"
description = "Generates a piece of messy code in a given language displaying a given string "
authors = ["piotr.idzik <vil02@o2.pl>"]
readme = "./string_to_code/README.md"
license = "MIT"
packages = [{include = "string_to_code"}]
repository = "https://github.com/vil02/string_to_code_proj"
keywords = ["code-generation"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "9.0.1"
pytest-mock = "3.15.1"
pylint = "4.0.3"
flake8 = "7.3.0"
flake8-pytest-style = "2.2.0"
ruff = "0.14.6"
coverage = "7.12.0"
black = "25.11.0"
mypy = "1.19.0"
bandit = "1.9.2"
xenon = "0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
