[tool.poetry]
name = "string-to-code"
version = "0.5.0"
description = "Generates a piece of messy code in a given language displaying a given string "
authors = ["piotr.idzik <vil02@o2.pl>"]
readme = "./string_to_code/README.md"
license = "MIT"
packages = [{include = "string_to_code"}]
repository = "https://github.com/vil02/string_to_code_proj"
keywords = ["code-generation"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-mock = "3.15.1"
pylint = "4.0.6"
flake8 = "7.3.0"
flake8-pytest-style = "2.2.0"
ruff = "0.15.20"
coverage = "7.15.0"
black = "26.5.1"
mypy = "2.1.0"
bandit = "1.9.4"
xenon = "0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
